--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -1,6 +1,6 @@
 :root {
-    --color-primary-white: rgb(209, 209, 209);
-    --color-primary-black: rgb(72, 72, 72);
+    --color-primary-white: rgb(255, 255, 255);
+    --color-primary-black: rgb(0, 0, 0);
 }
 
 * {
@@ -10,8 +10,8 @@
 }
 
 body {
-    /* background-color-light: var(--color-primary-white); */
     background-color: var(--color-primary-black);
+    color: var(--color-primary-white);
 }
 
 main {
@@ -21,6 +21,24 @@ main {
     align-items: center;
     padding: 50px;
     font-family: 'Roboto', sans-serif;
+}
+
+
+.navbar-a li a:hover {
+    color: chartreuse;
+}
+
+ul li a {
+    color: rgb(191, 191, 191);
+}
+
+ul li a:hover {
+    color: chartreuse;
+}
+
+.title-h1 {
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .cards {
@@ -38,10 +56,10 @@ main {
     cursor: pointer;
     position: relative;
     color: var(--color-primary-black);
-    box-shadow: 0 10px 30px 5px rgba(0, 0, 0, 0.2);
 
     &:hover {
         align-self: start;
+        box-shadow: 0 0px 10px 3px rgba(125, 192, 0, 0.526);
     }
 
     img {
@@ -49,11 +67,9 @@ main {
         object-fit: cover;
         width: 100%;
         height: 100%;
-        top: 0;
-        left: 0;
-        opacity: 0.9;
+        opacity: 0.8;
         transition: opacity .2s ease-out;
-        background-image: url("https: //avatars.githubusercontent.com/u/5197537?v=4"), linear-gradient(135deg, rgba(196, 196, 196, 0.876), rgba(0, 0, 0, 0.894));
+        background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.381) 0%, rgba(0, 0, 0, 0.5) 100%), url(https://i.pinimg.com/originals/54/3d/e8/543de8a1f2887da54f7b7de6772f6aa2.jpg);
     }
 
     h2 {
@@ -61,32 +77,31 @@ main {
         margin: 0;
         transition: inset .3s .3s ease-out;
         font-family: 'Roboto Condensed', sans-serif;
-        font-weight: 500;
+        font-weight: 600;
         text-transform: uppercase;
-        text-shadow: 1px 1px 1px rgba(255, 242, 0, 0.408);
+        text-shadow: 1px 1px 1px rgba(178, 113, 113, 0.408);
         font-size: 20px;
         align-items: center;
         justify-content: center;
         display: flex;
         text-align: center;
         margin-top: 50%;
-
     }
 
-    p,
     a {
         position: absolute;
         opacity: 0;
         max-width: 80%;
         transition: opacity .3s ease-out;
-        text-shadow: 1px 1px 1px rgba(255, 242, 0, 0.408);
+        text-shadow: 1px 1px 1px rgba(178, 113, 113, 0.408);
         font-size: 20px;
         align-items: center;
         justify-content: center;
         display: flex;
         text-align: center;
         margin-top: 50%;
-        font-size: 15px;
+        font-weight: 700;
+
     }
 
     p {
@@ -118,24 +133,14 @@ main {
     .material-symbols-outlined {
         vertical-align: middle;
     }
+}
 
+.footer img {
+    height: 30px;
+}
 
-    .github {
-        position: fixed;
-        display: flex;
-        right: 12px;
-        bottom: 12px;
-
-        svg {
-            width: 32px;
-            height: 32px;
-            fill: var(--color-primary-white);
-        }
-    }
-
-    .footer {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
+.footer img:hover {
+    height: 35px;
+    transition: height .5s ease-in;
+    box-shadow: inset 0 -3px #0c8612;
 }
