Creación de funcion para reutilizar las cards, se añadio el antiguo form a la web

--- a/TPO_4_Web_16_05_2024/css/form.css
+++ b/TPO_4_Web_16_05_2024/css/form.css
@@ -13,6 +13,7 @@
 
 }
 
+/* 
 html,
 body {
     width: 100%;
@@ -24,7 +25,7 @@ body {
     flex-wrap: wrap;
     font-family: system-ui;
     background-color: var(--background-color2);
-}
+} */
 
 .container {
     display: flex;
