--- a/TPO_Final2/styles.css
+++ b/TPO_Final2/styles.css
@@ -50,6 +50,7 @@ section {
     display: flex;
     justify-content: space-around;
     gap: 1em;
+    flex-wrap: wrap;
 }
 
 /* Estilos para cada destino individual */
@@ -167,4 +168,63 @@ footer {
         width: 95%;
     }
 }
+/* Estilos para el pie de página */
+footer {
+    background-color: #333;
+    color: white;
 
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.footer-container {
+    width: 100%;
+    padding-left: 5em;
+    padding-right: 5em;
+}
+
+.footer-content {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 2em;
+}
+
+.social-media {
+    display: flex;
+    gap: 1em;
+   
+}
+
+.social-media a {
+    color: white;
+    font-size: 1.5em;
+}
+
+.about-us {
+    text-align:right;
+
+}
+
+.about-us h3 {
+    margin-bottom: 0.5em;
+}
+
+.about-us ul {
+    list-style: none;
+    padding: 0;
+}
+
+.about-us li {
+    margin-bottom: 0.5em;
+}
+
+.footer-bottom {
+    text-align: center;
+    margin-top: 1em;
+    padding-top: 1em;
+    border-top: 1px solid #444;
+}
