--- a/TPO_Final/css/styles.css
+++ b/TPO_Final/css/styles.css
@@ -26,10 +26,14 @@
 /* Estilos generales del cuerpo */
 body {
     font-family: 'Roboto', sans-serif;
-    background-color: var(--background-color-white);
+    background: linear-gradient(to bottom, var(--background-color-white), var(--background-color-green));
+    position: relative;
+    overflow: hidden;
     margin: 0;
     padding: 0;
+    height: 100vh;
 }
+
 
 /* Estilos para el encabezado */
 header {
@@ -68,7 +72,6 @@ nav {
         color: var(--background-color-green);
     }
 }
-
 
 nav ul {
     list-style: none;
@@ -113,6 +116,35 @@ nav ul li a {
     transform: scaleX(1);
 }
 
+/* Boton de menu */
+
+.menu {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    flex-grow: 1;
+    transition: max-height 0.5s ease, opacity 0.5s ease;
+    max-height: 100px;
+    overflow: hidden;
+    opacity: 1;
+}
+
+.menu li {
+    margin: 0 1em;
+}
+
+.menu li a {
+    text-decoration: none;
+    color: var(--white);
+    font-weight: bold;
+    position: relative;
+}
+
+.btn-menu {
+    display: none;
+    /* Oculta el botón por defecto */
+}
 
 /* Estilos generales para las secciones */
 section {
@@ -173,7 +205,6 @@ section {
 form {
     display: flex;
     flex-direction: column;
-    align-items: center;
     background-color: var(--white2);
     padding: 2em;
     border-radius: 8px;
@@ -197,6 +228,7 @@ form button {
     padding: 0.5em;
     border: 1px solid var(--lightGray);
     border-radius: 4px;
+    font-family: 'Roboto';
 }
 
 form input:focus,
@@ -219,47 +251,48 @@ form select:focus {
     font-weight: 700;
 }
 
-/* Estilos para el pie de página */
-footer {
-    background-color: var(--background-color-green);
-    color: var(--white);
+.title-contacto {
+    padding: 10px;
     text-align: center;
-    padding: 1em 0;
 }
 
-/* Errors */
-.error-control {
-    display: flex;
+
+/* Errors Span */
+form .error-control {
+    margin: 0;
+    padding: 0;
+    text-align: justify;
     margin-bottom: 10px;
     margin-top: 10px;
-    width: 80%;
-    min-width: 2%;
-    height: auto;
     font-size: 11px;
-    text-align: justify;
 }
 
-.error-span {
+form .error-span {
     color: var(--error-color);
     text-shadow: 0px 0px 1px var(--gray);
 }
 
-.valid-span {
+form .valid-span {
     color: var(--green);
     font-size: 16px;
     transition: all 0.5s linear;
     text-shadow: 0px 0px 1px var(--gray);
 }
 
-#counter {
+form #counter {
     font-size: 13px;
     color: var(--info-counter);
-    margin-left: 10px;
-    margin-right: 10px;
     margin-bottom: 5px;
     margin-top: 5px;
     text-align: center;
     text-shadow: 0px 0px 1px var(--gray);
+}
+
+label[for=newsletter] {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    white-space: nowrap;
 }
 
 /* Modal - Popup*/
@@ -282,6 +315,7 @@ footer {
     border: 1px solid var(--border-b-footer);
     width: 500px;
     border-radius: 8px;
+    border: 3px solid var(--border-color-green);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
@@ -305,6 +339,21 @@ footer {
     color: var(--border-color-green);
     text-decoration: none;
     cursor: pointer;
+}
+
+.horizontal-line {
+    border: none;
+    border-top: 1px solid var(--background-color-green);
+    margin: 1rem 0;
+}
+
+
+/* Estilos para el pie de página */
+footer {
+    background-color: var(--background-color-green);
+    color: var(--white);
+    text-align: center;
+    padding: 1em 0;
 }
 
 /* Estilos para el pie de página */
@@ -413,7 +462,7 @@ footer {
 }
 
 .carousel-control:hover {
-    background-color: rgba(8, 69, 2, 0.8);
+    background-color: rgba(0, 121, 107, 0.8);
 }
 
 #prevBtn {
@@ -425,16 +474,13 @@ footer {
 }
 
 /* Media queries para diferentes resoluciones */
-@media (max-width: 1024px) {
+@media screen and (max-width: 1024px) {
     .destino {
         flex: 1 1 calc(50% - 1em);
     }
 }
 
-@media (max-width: 768px) {
-    nav ul {
-        flex-direction: column;
-    }
+@media screen and (max-width: 768px) {
 
     nav ul li {
         margin: 0.5em 0;
@@ -447,10 +493,62 @@ footer {
     form {
         width: 90%;
     }
+
+    .btn-menu {
+        display: block;
+        background-color: var(--white);
+        border-radius: 5px;
+        border: 1px solid var(--white);
+        padding: 5px 7px;
+    }
+
+    .btn-menu:hover {
+        background-color: var(--background-color-green-hover);
+        color: var(--white);
+    }
+
+    .menu {
+        max-height: 0;
+        flex-direction: row;
+        align-items: center;
+        overflow: hidden;
+        transition: max-height 0.5s ease;
+
+    }
+
+    .menu.show {
+        /* Ajusta la altura máxima cuando el menú está visible */
+        max-height: 100px;
+    }
+
+    .menu li {
+        margin: 10px 0;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 0 32px;
+    }
 }
 
-@media (max-width: 480px) {
+@media screen and (max-width: 480px) {
     form {
         width: 95%;
+    }
+
+    .btn-menu {
+        display: block;
+        /* Muestra el botón */
+    }
+
+    .menu {
+        max-height: 0;
+        /* Oculta el menú por defecto */
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .menu.show {
+        /* Ajusta la altura máxima cuando el menú está visible */
+        max-height: 300px;
     }
 }
