--- a/TPO_Final/css/styles.css
+++ b/TPO_Final/css/styles.css
@@ -28,10 +28,10 @@ body {
     font-family: 'Roboto', sans-serif;
     background: linear-gradient(to bottom, var(--background-color-white), var(--background-color-green));
     position: relative;
-    overflow: hidden;
     margin: 0;
     padding: 0;
-    height: 100vh;
+    overflow-x: auto;
+    overflow-y: auto;
 }
 
 
@@ -93,9 +93,15 @@ nav ul li a {
     position: relative;
 }
 
+/* Estilos para los enlaces con clase "animacion-sub" */
 .animacion-sub {
     position: relative;
     text-decoration: none;
+    color: inherit;
+}
+
+.animacion-sub:hover {
+    text-shadow: 0 0 3px var(--white);
 }
 
 .animacion-sub::after {
@@ -103,12 +109,12 @@ nav ul li a {
     position: absolute;
     width: 100%;
     height: 2px;
-    bottom: -5px;
+    bottom: -1px;
     left: 0;
     background-color: var(--background-color-white);
     visibility: hidden;
     transform: scaleX(0);
-    transition: all 0.3s ease-in-out;
+    transition: transform 0.3s ease;
 }
 
 .animacion-sub:hover::after {
@@ -117,14 +123,13 @@ nav ul li a {
 }
 
 /* Boton de menu */
-
 .menu {
     list-style: none;
     display: flex;
     justify-content: center;
     margin: 0;
     flex-grow: 1;
-    transition: max-height 0.5s ease, opacity 0.5s ease;
+    transition: max-height 0.5s ease;
     max-height: 100px;
     overflow: hidden;
     opacity: 1;
@@ -347,23 +352,16 @@ label[for=newsletter] {
     margin: 1rem 0;
 }
 
-
-/* Estilos para el pie de página */
-footer {
-    background-color: var(--background-color-green);
-    color: var(--white);
-    text-align: center;
-    padding: 1em 0;
-}
-
 /* Estilos para el pie de página */
 footer {
     background-color: var(--background-color-footer);
-    color: var(--white);
 
     display: flex;
     justify-content: space-between;
     align-items: center;
+    color: var(--white);
+    text-align: center;
+    padding: 1em 0;
 }
 
 .footer-container {
@@ -384,12 +382,17 @@ footer {
 .social-media {
     display: flex;
     gap: 1em;
-
 }
+
+
 
 .social-media a {
     color: var(--white);
     font-size: 1.5em;
+}
+
+.social-media a:hover {
+    text-shadow: 0 0 15px var(--background-color-green);
 }
 
 .about-us {
@@ -496,10 +499,16 @@ footer {
 
     .btn-menu {
         display: block;
-        background-color: var(--white);
-        border-radius: 5px;
-        border: 1px solid var(--white);
-        padding: 5px 7px;
+        background-color: transparent;
+        border: none;
+        color: var(--white);
+        font-size: 1.5em;
+        margin-right: 1em;
+        cursor: pointer;
+    }
+
+    .btn-menu:hover {
+        color: var(--background-color-green);
     }
 
     .btn-menu:hover {
@@ -508,16 +517,14 @@ footer {
     }
 
     .menu {
-        max-height: 0;
+        height: 0;
         flex-direction: row;
         align-items: center;
         overflow: hidden;
-        transition: max-height 0.5s ease;
-
+        transition: height 0.5s ease;
     }
 
     .menu.show {
-        /* Ajusta la altura máxima cuando el menú está visible */
         max-height: 100px;
     }
 
@@ -537,7 +544,16 @@ footer {
 
     .btn-menu {
         display: block;
-        /* Muestra el botón */
+        background-color: transparent;
+        border: none;
+        color: var(--white);
+        font-size: 1.5em;
+        margin-right: 1em;
+        cursor: pointer;
+    }
+
+    .btn-menu:hover {
+        color: var(--background-color-green);
     }
 
     .menu {
