--- a/TPO_Final/css/styles.css
+++ b/TPO_Final/css/styles.css
@@ -235,6 +235,7 @@ form {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     max-width: 600px;
     margin: 0 auto;
+    margin-bottom: 20px;
 }
 
 form label {
